<resources>
    <string name="app_name">Sath_Eats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sath_eats">Sath Eats</string>
    <string name="your_food_journey_starts_here_explore_order_devour">Your Food Journey Starts Here: Explore, Order, Devour</string>
    <string name="sign_in">SignIn</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="sathsarajmu0077_gmail_com">sathsarajmu0077@gmail.com</string>
    <string name="sath_eatss">SATH EATS</string>
    <string name="what_do_you_want">What Do you want ?</string>
    <string name="_10_00_23_00">10.00 - 23.00</string>
    <string name="_5_0">5.0</string>
    <string name="product_name">Product Name</string>
    <string name="your_favourite_and_tasty_food_is_here">Your Favourite and Tasty Food is Here!</string>
    <string name="view_more">view more</string>
</resources>